--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "dev": "./node_modules/http-server/bin/http-server"
+    "dev": "./node_modules/http-server/bin/http-server -c-1"
   },
   "dependencies": {
     "http-server": "^14.1.1"
